# sharekhan-connect-mcp

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydocstyle  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  README_PUSH_INSTRUCTIONS.md  SECURITY.md  SUPPORT.md  check-formatting.sh  check-security-quality.sh  docker-compose.yml  mcp.json  push_to_github.sh  pyproject.toml  setup.py  test_installation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CONFIGURATION.md  MCP_INTEGRATION.md  QUICKSTART.md  sharekhan-api-guide.md
scripts/: auto-fix.sh  local-ci-check.sh  pre-commit-check.sh  quality-check.sh
src/sharekhan_connect_mcp/: __init__.py  client.py  config.py  error_handler.py  logger.py  monitoring.py  server.py  session.py  tools.py  websocket.py
tests/: __init__.py  test_github_actions_versions.py
